--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -13,7 +13,7 @@
     width: 1080px;
     padding: 26px;
 
-    background-image: url(/img/header-bg.png);
+    background-image: url(../img/header-bg.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
