--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ html, body {
 .header__screen {
   width: 1080px;
   padding: 26px;
-  background-image: url(/img/header-bg.png);
+  background-image: url(../img/header-bg.png);
   background-size: contain;
   background-repeat: no-repeat;
 }
