--- a/scss/blocks/_candles.scss
+++ b/scss/blocks/_candles.scss
@@ -45,6 +45,7 @@
 .candles__bg-img {
     background-image: url(../img/candles.png);
     background-size: cover;
+    background-position: center center;
     flex-grow: 1;
 }
 
