--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,3 +9,7 @@
 
 @import './blocks/header';
 @import './blocks/candles';
+@import './blocks/images-screen';
+@import './blocks/benefit';
+@import './blocks/girl';
+@import './blocks/power';
