--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -20,6 +20,7 @@
     flex-grow: 1;
     background-image: url(../img/header-bg.png);
     background-size: cover;
+    background-position: center center;
     padding: 25px;
 }
 
