--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,6 @@
 @import './blocks/benefit';
 @import './blocks/girl';
 @import './blocks/power';
+@import './blocks/orange';
+@import './blocks/industry';
+@import './blocks/footer';
