--- a/css/main.css
+++ b/css/main.css
@@ -112,13 +112,12 @@ html, body {
 .row {
   display: flex;
   background-color: #E7F066;
+  height: 100vh;
 }
 
 .row-1 {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  min-height: 800px;
   flex-grow: 1;
 }
 
@@ -142,8 +141,6 @@ html, body {
   width: 25%;
   flex-shrink: 1;
   display: flex;
-  justify-content: flex-end;
-  height: 100%;
   flex-direction: column;
   padding: 26px 40px;
 }
@@ -190,6 +187,10 @@ html, body {
   line-height: 19px;
   border-bottom: 1px solid var(--main-color);
   padding-bottom: 5px;
+  transition: color 0.15 ease-in;
+}
+.row__about-link:hover {
+  color: #797474;
 }
 
 .header__abs {
@@ -232,6 +233,7 @@ html, body {
   font-size: 15px;
   line-height: 19px;
   letter-spacing: 0.5px;
+  height: 100vh;
 }
 
 .candles__info {
@@ -251,13 +253,15 @@ html, body {
   text-transform: uppercase;
   border-bottom: 1px solid #B2B2B2;
   padding-bottom: 5px;
+  transition: color 0.15s ease-in;
+}
+.candles__link:hover {
+  color: #d4d4d4;
 }
 
 .candles__bg {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  min-height: 800px;
   flex-grow: 1;
 }
 
@@ -321,12 +325,8 @@ html, body {
   padding-bottom: 5px;
 }
 
-.benefit {
-  height: 100vh;
-}
-
 .benefit__row {
-  height: 100%;
+  height: 100vh;
   padding: 50px 25px;
   display: flex;
 }
@@ -390,12 +390,12 @@ html, body {
   display: flex;
   background-color: #A26779;
   height: 100vh;
-}
-
-.girl__info {
   font-size: 15px;
   line-height: 19px;
   color: #B2B2B2;
+}
+
+.girl__info {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -485,4 +485,166 @@ html, body {
 }
 .power__link:hover {
   color: #5f5a5a;
+}
+
+.orange__row {
+  display: flex;
+  background-color: #504B4D;
+  font-size: 15px;
+  line-height: 19px;
+  color: #B2B2B2;
+  height: 100vh;
+}
+
+.orange__info {
+  width: 25%;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.orange__desc {
+  max-width: 330px;
+}
+
+.orange__desc-text {
+  margin-bottom: 22px;
+}
+
+.orange__link {
+  border-bottom: 1px solid #B2B2B2;
+  padding-bottom: 5px;
+  color: #B2B2B2;
+  transition: color 0.15 ease-in;
+}
+.orange__link:hover {
+  color: #b3a0a0;
+}
+
+.orange__bg {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.orange__bg-img {
+  background-image: url(../img/orange.png);
+  background-size: cover;
+  flex-grow: 1;
+}
+
+.orange__bg-text {
+  display: flex;
+  justify-content: flex-end;
+  padding: 47px 40px 33px 0;
+  font-size: 25px;
+  line-height: 32px;
+}
+
+.industry__row {
+  height: 100vh;
+  display: flex;
+  color: #B2B2B2;
+  background-color: #B04836;
+  font-size: 15px;
+  line-height: 19px;
+}
+
+.industry__info {
+  width: 25%;
+  padding: 53px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.industry__desc {
+  max-width: 330px;
+}
+
+.industry__desc-text {
+  margin-bottom: 22px;
+}
+
+.industry__link {
+  color: #B2B2B2;
+  border-bottom: 1px solid #B2B2B2;
+  padding-bottom: 5px;
+}
+.industry__link:hover {
+  color: #b3a0a0;
+}
+
+.industry__bg {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.industry__bg-img {
+  background-image: url(../img/industry.png);
+  background-size: cover;
+  flex-grow: 1;
+}
+
+.industry__bg-text {
+  padding: 63px 39px 17px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.footer {
+  font-size: 14px;
+  line-height: 19px;
+  color: #CCCCCC;
+}
+
+.footer__content {
+  background-color: #262626;
+  padding: 50px 40px;
+}
+
+.footer__text {
+  margin-bottom: 21px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__cube {
+  height: 16px;
+  width: 16px;
+  background-color: #CCCCCC;
+}
+
+.footer__inputs {
+  margin-bottom: 8px;
+}
+
+.login {
+  display: flex;
+  gap: 20px;
+}
+
+.input-name {
+  border-bottom: 1px solid #CCCCCC;
+  width: 250px;
+  height: 1px;
+  margin-bottom: 8px;
+}
+
+.input-email {
+  border-bottom: 1px solid #CCCCCC;
+  width: 250px;
+  height: 1px;
+  margin-bottom: 8px;
+}
+
+.submit {
+  margin-top: 18px;
+}
+.submit:hover {
+  color: #dfdede;
 }/*# sourceMappingURL=main.css.map */
