--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -5,14 +5,13 @@
 .row {
     display: flex;
     background-color: #E7F066;
+    height: 100vh;
 }
 
 
 .row-1 {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    min-height: 800px;
     flex-grow: 1;
 }
 
@@ -36,8 +35,6 @@
     width: 25%;
     flex-shrink: 1;
     display: flex;
-    justify-content: flex-end;
-    height: 100%;
     flex-direction: column;
     padding: 26px 40px;
 }
@@ -75,7 +72,7 @@
     margin-bottom: 20px;
     font-size: 14px;
     line-height: 19px;
-    letter-spacing: 0.5px
+    letter-spacing: 0.5px;
 }
 
 .row__about-link {
@@ -84,6 +81,11 @@
     line-height: 19px;
     border-bottom: 1px solid var(--main-color);
     padding-bottom: 5px;
+    transition: color 0.15 ease-in;
+    &:hover {
+
+        color: #797474;
+    }
 }
 
 
